fix: thread-safe telemetry, volatile cached fields, RestTemplate timeout, fix N+1 query